# temporal-copilot-mcp-agent

./: .gitignore  README.md  agent.py  config.py  pyproject.toml  server.py  worker.py  workflow.py
fakebank/: main.py
