[project]
name = "home-loan-mcp-server"
version = "0.1.0"
dependencies = [
    "fastapi>=0.119.0",
    "logfire>=4.13.2",
    "mcp[cli]>=1.18.0",
    "pydantic>=2.0.0",
    "pydantic-ai>=1.1.0",
    "temporalio>=1.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
